# sysadminToolBox

./: .gitignore  MIGRATION_GUIDE.md  README.md  ToolboxPyQt6.spec  correction.py  main.py  pyproject.toml  python_fix_network_import.py  refactorisation_assitant.py  refactorisation_code.py  requirements.txt  rsize_icons.py  setup_refactor_script.py  test.csv  verify_migration_script.py
backup_original/src_backup_20250604_144028/: main.py
config/: README.md
logs/: .gitkeep
old/: proxmox_vm_viewer.py
resources/icons/: .gitkeep
resources/styles/: .gitkeep
resources/templates/: .gitkeep
src/: __init__.py
src/core/: logger.py
src/handlers/: __init__.py  git_manager.py  proxmox_handler.py  script_runner.py
src/handlers/proxmox/: node_manager.py  proxmox_client.py  storage_manager.py  vm_manager.py
src/models/: README.md  __init__.py
src/network/: __init__.py  command_executor.py  device_manager.py  ssh_client.py
src/services/: README.md  installation_thread.py  proxmox_service.py  qemu_agent_service.py  ssh_service.py
src/ui/: __init__.py  main_window.py  main_window_refactored.py  main_window_refactored.py.backup2
src/ui/components/: README.md  __init__.py  common_widgets.py  common_widgets.py.BROKEN  connection_manager.py  connection_panel.py  log_display.py  tab_manager.py
src/ui/controllers/: README.md  __init__.py  main_controller.py  proxmox_controller.py
src/ui/dialogs/: __init__.py  ip_assignment_dialog.py  network_config_dialog.py  proxmox_config_dialog.py  qemu_agent_dialog.py
src/utils/: ip_plan_importer.py
tests/: README.md
(+15 files in other folders)
