[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbox-pyqt6"
version = "0.0.6"
description = "Toolbox de gestion infrastructure avec PyQt6"
authors = [{name = "ocrano"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "PyQt6==6.6.1",
    "proxmoxer==1.3.0", 
    "paramiko==3.4.0",
    "pandas==2.1.4",
    "openpyxl==3.1.2",
    "requests==2.31.0",
    "keyring==24.3.0",
    "python-gitlab==4.1.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0", 
    "black>=22.0",
    "flake8>=5.0",
    "pyinstaller>=5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
